acrescentando um paragrafo

--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Pagina de VENDAS</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla accusamus quod consequuntur, quae nobis atque nesciunt sint eos fuga veritatis, animi necessitatibus est tempore quo modi quas labore molestiae! Aliquam!<p>
     <a href="index.html">Ir para a pagina de inicial</a>
 </body>
 </html>
