--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Pagina HOME</h1>
     <a href="vendas.html">Ir para a paginas de vendas</a>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores laudantium ipsam aliquid eos explicabo labore alias deserunt iusto quaerat, similique ab aliquam necessitatibus facere harum exercitationem officiis! Possimus, neque fugiat.</p>
 </body>
 </html>
