--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Pagina HOME</h1>
     <a href="vendas.html">Ir para a paginas de vendas</a>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores laudantium ipsam aliquid eos explicabo labore alias deserunt iusto quaerat, similique ab aliquam necessitatibus facere harum exercitationem officiis! Possimus, neque fugiat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quo inventore porro possimus quibusdam! Ipsam mollitia in placeat laudantium, fuga tempora rerum saepe accusamus beatae libero at voluptates quisquam similique.</p>
 </body>
 </html>
