--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
     <h1>Pagina de Login</h1>
     <form action="">
         <label for="email">email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email" placeholder="Nome">
         <label for="password">password</label>
-        <input type="password" namepassword id="password">
+        <input type="password" namepassword id="password" placeholder="Senha">
     </form>
     <a href="index.html">Ir para a pagina de inicial</a>
 </body>
