Total do pedido

--- a/pedidos.html
+++ b/pedidos.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla accusamus quod consequuntur, quae nobis atque nesciunt sint eos fuga veritatis, animi necessitatibus est tempore quo modi quas labore molestiae! Aliquam!<p>
     <a href="index.html">Ir para a pagina de inicial</a>
     <h2>carrinho</h2>
+    <h2>Total</h2>
 </body>
 </html>
